--- a/WaterIntakeCalc/Web.config
+++ b/WaterIntakeCalc/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WaterIntakeCalc-20160615120557.mdf;Initial Catalog=aspnet-WaterIntakeCalc-20160615120557;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WaterIntakeCalc-20160615120557.mdf;Initial Catalog=aspnet-WaterIntakeCalc-20160615120557;Integrated Security=True"
+      providerName="System.Data.SqlClient" /-->
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=WaterIntakeApp;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
