Add chart service, tests

--- a/WaterIntakeCalc/WaterIntakeCalc.csproj
+++ b/WaterIntakeCalc/WaterIntakeCalc.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
@@ -197,6 +199,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Const\ChartConst.cs" />
     <Compile Include="Const\ResponseMessages.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -218,7 +221,8 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Results\ResponseResult.cs" />
-    <Compile Include="Services\PlotService.cs" />
+    <Compile Include="Services\ChartService.cs" />
+    <Compile Include="DAL\IWaterIntakeDataAccess.cs" />
     <Compile Include="Services\WaterIntakeService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
