--- a/WaterIntakeCalcWeb/bower.json
+++ b/WaterIntakeCalcWeb/bower.json
@@ -11,7 +11,10 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-local-storage": "^0.2.7",
+    "angular-ui-bootstrap": "^1.3.3",
+    "jquery": "^3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -26,5 +29,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "jquery": "1.9.1 - 2"
   }
 }
