--- a/WaterIntakeCalcWeb/package.json
+++ b/WaterIntakeCalcWeb/package.json
@@ -5,6 +5,7 @@
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
+    "grunt-bower-install-simple": "^1.2.3",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.0",
@@ -40,5 +41,9 @@
   },
   "scripts": {
     "test": "karma start test\\karma.conf.js"
+  },
+  "dependencies": {
+    "grunt-bower-install": "^1.6.0",
+    "grunt-bower-install-simple": "^1.2.3"
   }
 }
